// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render hides the load more button when there is no page size 1`] = `
<Styled(div)>
  <h5>
    Found 2 results.
  </h5>
  <TranslateAndFade
    component={[Function]}
    disable={true}
  >
    <div
      key="1"
    >
      <BillCell
        bill={
          Object {
            "id": 1,
          }
        }
      />
    </div>
    <div
      key="2"
    >
      <BillCell
        bill={
          Object {
            "id": 2,
          }
        }
      />
    </div>
  </TranslateAndFade>
</Styled(div)>
`;

exports[`#render shows the list 1`] = `
<Styled(div)>
  <h5>
    Found 2 results.
  </h5>
  <TranslateAndFade
    component={[Function]}
    disable={true}
  >
    <div
      key="1"
    >
      <BillCell
        bill={
          Object {
            "id": 1,
          }
        }
      />
    </div>
    <div
      key="2"
    >
      <BillCell
        bill={
          Object {
            "id": 2,
          }
        }
      />
    </div>
  </TranslateAndFade>
  <Styled(Button)
    isSecondary={true}
    onClick={[Function]}
  >
    Load More
  </Styled(Button)>
</Styled(div)>
`;
